--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,4 @@ block content
   h1 This is my test repo app
   p Welcome to #{title}
 
-  p this are some changes to my app
+  p this another change
